--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고려대 자전 | 정보 도우미</title>
+    <title>정보 도우미 | 고려대 자전</title>
   </head>
   <body>
     <div id="root"></div>
